# name: TestAttachGroupTransform.test_multiple_documents
  <class 'list'> [
    <class 'dict'> {
      'id': 'doc_0',
      'primary_group': <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    },
    <class 'dict'> {
      'id': 'doc_1',
      'primary_group': <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    },
    <class 'dict'> {
      'id': 'doc_2',
      'primary_group': <class 'dict'> {
        'id': '7cf872dc',
        'name': 'architects',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    },
  ]
---
# name: TestAttachGroupTransform.test_primary_group_missing
  <class 'dict'> {
    'id': 'doc_0',
    'primary_group': None,
  }
---
# name: TestAttachGroupTransform.test_primary_group_present
  <class 'dict'> {
    'id': 'doc_0',
    'primary_group': <class 'dict'> {
      'id': 'bf1b993c',
      'name': 'musicians',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
  }
---
# name: TestAttachGroupsTransform.test_groups_missing
  <class 'dict'> {
    'groups': <class 'list'> [
    ],
    'id': 'doc_0',
  }
---
# name: TestAttachGroupsTransform.test_groups_present
  <class 'dict'> {
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    ],
    'id': 'doc_0',
  }
---
# name: TestAttachGroupsTransform.test_multiple_documents
  <class 'list'> [
    <class 'dict'> {
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 'bf1b993c',
          'name': 'musicians',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': 'fb085f7f',
          'name': 'hydrogeologists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'id': 'doc_0',
    },
    <class 'dict'> {
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': '7cf872dc',
          'name': 'architects',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': '3cbb22cc',
          'name': 'secretary/administrators',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'id': 'doc_1',
    },
    <class 'dict'> {
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 'da42dca3',
          'name': 'orthoptists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': '09d01419',
          'name': 'dietitians',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'id': 'doc_2',
    },
  ]
---
